# fastapi-angular-boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml  tests.yml
deploy/: docker-compose.dev.yml  docker-compose.otlp.yml  otel-collector-config.yml
docs/: README.md  gen_ref_pages.py  index.md
docs/backend/: api.md  architecture.md
docs/deployment/: docker.md  github-pages.md
docs/frontend/: overview.md
docs/getting-started/: configuration.md  installation.md  running.md
lelab-common/: README.md  pyproject.toml
lelab-common/src/lelab_common/: __init__.py  cancellation_context.py  configuration.py  exceptions.py  httpx.py  logger.py  openapi.py  request_trace_middleware.py
lelab-common/src/lelab_common/auth/: __init__.py  bearer_jwt.py  dependencies.py  models.py  oauth2_jwt.py  settings.py
rest_angular/: __init__.py  __main__.py  app.py  config.py
rest_angular/infra/bus/: kafka.py  settings.py
rest_angular/infra/cache/: exceptions.py  redis.py  settings.py
rest_angular/infra/monitor/: otel.py  settings.py
rest_angular/infra/orm/: base_model.py  repository.py  sa.py  settings.py  uow.py
rest_angular/migrations/: env.py  models.py  script.py.mako
rest_angular/migrations/versions/: 2025-09-02-18-54_f73da801808d.py  2025-09-02-18-55_9ac0615b41e7.py
rest_angular/modules/plans/: dependencies.py  exceptions.py  models.py  repository.py  routes.py  schemas.py  service.py  settings.py
rest_angular/modules/system/: routes.py
rest_angular/modules/users/: google_oauth_routes.py  settings.py  user.py  user_dto.py  user_manager.py  user_routes.py
scripts/: build-production.sh  docs.sh
tests/: __init__.py  conftest.py  test_config.py  test_kafka.py  test_plans_routes.py  test_redis.py  test_rest_angular.py
web-angular/: .prettierignore  .prettierrc  README.md  angular.json  generate-api.config.js  package-lock.json  package.json
web-angular/api-templates/: api.ejs  data-contract-jsdoc.ejs  data-contracts.ejs  enum-data-contract.ejs  interface-data-contract.ejs  naming-utils.ejs  procedure-call.ejs  route-docs.ejs  route-types.ejs  type-data-contract.ejs
web-angular/public/: tailwind.css
web-angular/scripts/: generate-api.js
web-angular/src/: index.html  main.ts  styles.scss
web-angular/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
web-angular/src/app/api-generated/: Api.ts  Auth.ts  Plans.ts  Users.ts  data-contracts.ts
web-angular/src/app/common/directives/: dropdown.directive.ts  toggle-password.directive.ts
web-angular/src/app/common/guards/: auth.guard.ts  role.guard.ts
web-angular/src/app/common/interceptors/: auth.interceptor.ts  http-error.interceptor.ts  index.ts
web-angular/src/app/common/interfaces/: jwt-payload.ts  pagination-request.ts  pagination-response.ts  user-response.ts
web-angular/src/app/common/models/: custom-card-model.ts
web-angular/src/app/common/modules/app-common/: app-common.module.ts
web-angular/src/app/common/modules/material-form-shared/: material-form-shared.module.ts
web-angular/src/app/common/services/: app-error-handler.service.ts  auth.service.ts  error-handler.service.ts  http-error-reporter.service.ts  notification.service.ts  rest.service.ts  user.service.ts
web-angular/src/app/components/cards/card-bar-chart/: card-bar-chart.component.html  card-bar-chart.component.ts
web-angular/src/app/components/cards/card-line-chart/: card-line-chart.component.html  card-line-chart.component.ts
web-angular/src/app/components/cards/card-page-visits/: card-page-visits.component.html  card-page-visits.component.ts
web-angular/src/app/components/cards/card-profile/: card-profile.component.html  card-profile.component.ts
web-angular/src/app/components/error-demo/: error-demo.component.ts
web-angular/src/app/components/notification/: notification.component.html  notification.component.scss  notification.component.ts
web-angular/src/app/components/notification-container/: notification-container.component.html  notification-container.component.scss  notification-container.component.ts
web-angular/src/app/components/reactive-text-input/: reactive-text-input.component.html  reactive-text-input.component.ts
web-angular/src/app/components/sidebar/: sidebar.component.html  sidebar.component.ts
web-angular/src/app/views/admin/: admin.component.html  admin.component.ts
web-angular/src/app/views/auth/: auth.component.html  auth.component.ts
web-angular/src/app/views/index/: index.component.html  index.component.ts
web-angular/src/app/views/landing/: landing.component.html  landing.component.ts
web-angular/src/app/views/profile/: profile.component.html  profile.component.ts
web-angular/src/environments/: environment.prod.ts  environment.ts
(+46 files in other folders)
