[project]
name = "rest_angular"
version = "0.1.0"
description = ""
authors = []
requires-python = ">=3.12,<3.13"
readme = "README.md"
maintainers = []
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "fastapi-users>=14.0.0",
    "httpx-oauth>=0.16.1",
    "fastapi-users-db-sqlalchemy>=6.0.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "yarl>=1.18.3",
    "ujson>=5.10.0",
    "SQLAlchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "redis[hiredis]>=5.2.1",
    "aiofiles>=24.1.0",
    "httptools>=0.6.4",
    "pymongo>=4.10.1",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation>=0.50b0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "opentelemetry-instrumentation-redis>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "aiokafka>=0.12.0",
    "cachetools>=6.1.0",
    "asyncpg>=0.30.0,<0.31",
    "apscheduler>=4.0.0a6",
    "psycopg2>=2.9.10",
    "PyJWT>=2.8.0",
    "lelab-common",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5.0",
    "pre-commit>=3.7.1",
    "pytest-cov>=5",
    "anyio>=4",
    "pytest-env>=1.1.3",
    "fakeredis>=2.23.3",
    "httpx>=0.27.0",
    "pyright>=1.1.389",
]

[tool.uv.workspace]
members = ["lelab-common"]

[tool.uv.sources]
lelab-common = { workspace = true }

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = ["REST_ANGULAR_ENVIRONMENT=pytest", "DB_NAME=rest_angular_test"]

[tool.ruff]
line-length = 120
src = ["rest_angular"]

[tool.ruff.lint]
ignore = [
    "E712", # Comparison to True should be 'if cond is True:' or 'if cond:'
    "E722", # Do not use bare `except`,
    "F401", # Unused import,
    "F841", # Unused variable
    "E501", # Line too long,
    "E402", # Module level import not at top of file
]
extend-select = ["E", "F", "I"]

[tool.pyright.packageIndexDepths]
"rest_angular" = 3

[tool.pyright]
include = ["rest_angular"]
ignore = [
    "**/.venv",
    "**/__pycache__",
    "**/build",
    "**/dist",
    "**/node_modules",
    "**/migrations/versions",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
diagnosticMode = "openFilesOnly"
extraPaths = ["./rest_angular"]
autoImportCompletions = true
autoSearchPaths = true
autoFormatStrings = true
useLibraryCodeForTypes = true
analyzeUnannotatedFunctions = true
strictListInference = true
strictSetInference = true
strictDictionaryInference = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = true
reportUnknownVariableType = true
reportUnknownParameterType = true
reportMissingParameterType = false
reportMissingReturnType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportUntypedNamedTuple = false
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportOverlappingOverload = false
reportUninitializedInstanceVariable = false
reportCallInDefaultInitializer = false
reportUnnecessaryIsInstance = false
reportUnnecessaryCast = false
reportUnnecessaryComparison = false
reportUnnecessaryContains = false
reportAssertAlwaysTrue = false
reportSelfClsParameterName = false
reportImplicitStringConcatenation = false
reportUndefinedVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportAbstractUsage = true
reportArgumentType = true
reportAssertTypeFailure = true
reportAssignmentType = true
reportAttributeAccessIssue = true
reportCallIssue = true
reportGeneralTypeIssues = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportRedeclaration = true
reportReturnType = true
reportTypedDictNotRequiredAccess = false
reportUnusedImport = false
reportUnusedVariable = false
reportUnusedFunction = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
